[package]
name = "liqour_defi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liqour_defi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
anchor-spl  = { version = "1.0.1", features = ["token"] }

[dev-dependencies]
litesvm                              = "0.10.0"
solana-account                       = "3.4.0"
solana-keypair                       = "3.0.1"
solana-message                       = "3.0.1"
solana-program-option                = "3.1.0"
solana-program-pack                  = "3.1.0"
solana-pubkey                        = "3.0.0"
solana-signer                        = "3.0.0"
solana-transaction                   = "3.0.2"
solana-sysvar                        = "3.1.1"
spl-associated-token-account-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }